# ckanext-harvestportal

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
ckanext/harvestportal/: cli.py  helpers.py  plugin.py  views.py
ckanext/harvestportal/assets/: script.js  webassets.yml
ckanext/harvestportal/logic/: action.py  auth.py  schema.py  validators.py
ckanext/harvestportal/public/: harvestportal.css
ckanext/harvestportal/public/openapi/: harvest-portal-api.json
ckanext/harvestportal/schemas/: resource_schema.yaml
ckanext/harvestportal/templates/: api_docs.html  base.html  header.html  mcp_docs.html
ckanext/harvestportal/templates/home/: index.html
ckanext/harvestportal/templates/package/snippets/: additional_info.html  resource_form.html
ckanext/harvestportal/templates/user/: login.html
ckanext/harvestportal/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/harvestportal/tests/logic/: test_action.py  test_auth.py  test_validators.py
